--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
     }
   </style>
 </head>
-<body style="overflow: hidden;">
+<body style="overflow-x: hidden;">
   <div id="splash">
     <img src="Logo.webp" alt="Splash Logo" />
   </div>
@@ -215,7 +215,7 @@
     </div>
   </section>
 
-  <section class="portfolio" style="position: absolute; top: 80px; left: 0; width: 100%; height: calc(100vh - 140px); display: none; flex-direction: column; text-align: center; padding: 2rem; overflow: hidden;">
+  <section class="portfolio" style="position: absolute; top: 80px; left: 0; width: 100%; min-height: calc(100vh - 140px); display: none; flex-direction: column; text-align: center; padding: 2rem; overflow-y: auto;">
     <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">My Previous Works</h2>
     <p style="max-width: 600px; font-size: 1rem; color: #515154; margin-bottom: 2rem; margin-left: auto; margin-right: auto;">Here are some of the responsive and interactive websites I’ve designed and developed. These reflect my skills in layout, design, and mobile optimization.</p>
 
