--- a/index.html
+++ b/index.html
@@ -133,6 +133,12 @@
       }
     }
 
+    .hero, .portfolio, .expertise {
+      opacity: 1;
+      transition: opacity 0.8s ease, transform 0.8s ease;
+      transform: scale(1);
+    }
+
     .hero {
       display: flex;
       flex-direction: column;
@@ -141,6 +147,10 @@
       text-align: center;
       height: calc(100vh - 140px);
       padding: 2rem;
+      position: absolute;
+      top: 80px;
+      left: 0;
+      width: 100%;
     }
 
     .hero-text {
@@ -158,10 +168,6 @@
       color: #515154;
     }
 
-    footer {
-      display: none;
-    }
-
     .portfolio-grid {
       display: grid;
       grid-template-columns: repeat(3, 1fr);
@@ -169,6 +175,18 @@
       width: 100%;
       max-width: 960px;
       margin: 0 auto;
+    }
+
+    .portfolio-grid div {
+      height: 150px;
+      background: #e0e0e0;
+      border-radius: 8px;
+      transition: transform 0.3s ease;
+      cursor: pointer;
+    }
+
+    .portfolio-grid div:hover {
+      transform: scale(1.05);
     }
 
     @media (max-width: 768px) {
@@ -183,111 +201,155 @@
       }
     }
 
-    .hero, .portfolio {
-      opacity: 1;
-      transition: opacity 0.8s ease, transform 0.8s ease;
-      transform: scale(1);
+    .expertise {
+      position: absolute;
+      top: 80px;
+      left: 0;
+      width: 100%;
+      min-height: calc(100vh - 140px);
+      display: none;
+      flex-direction: column;
+      text-align: center;
+      padding: 2rem;
+      overflow-y: auto;
+    }
+
+    .expertise-buttons {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 1rem;
+      justify-content: center;
+      margin-top: 2rem;
+    }
+
+    .button-style {
+      padding: 0.6rem 1.5rem;
+      border-radius: 999px;
+      background-color: #1d1d1f;
+      color: white;
+      border: none;
+      font-weight: 500;
+      font-size: 0.95rem;
+      cursor: pointer;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+      transition: transform 0.2s ease;
+    }
+
+    .button-style:hover {
+      transform: translateY(-2px);
+    }
+
+    .view-button {
+      padding: 0.6rem 1.5rem;
+      border-radius: 999px;
+      background-color: #1d1d1f;
+      color: white;
+      text-decoration: none;
+      font-weight: 500;
+      font-size: 0.95rem;
+      display: inline-block;
+      box-shadow: 0 3px 8px rgba(0,0,0,0.2);
+      transition: transform 0.2s ease;
+    }
+
+    .view-button:hover {
+      transform: translateY(-2px);
     }
   </style>
 </head>
-<body style="overflow-x: hidden;">
-  <div id="splash">
-    <img src="Logo.webp" alt="Splash Logo" />
+<body>
+<div id="splash">
+  <img src="Logo.webp" alt="Splash Logo" />
+</div>
+
+<header>
+  <h1>
+    @miyonotmeor
+    <span>Copyright © 2025 Amirrul Mukminin</span>
+  </h1>
+  <div class="menu-toggle" onclick="toggleMenu()">
+    <span></span>
+    <span></span>
+    <span></span>
   </div>
+  <nav id="nav-menu">
+    <a href="#">Home</a>
+    <a href="#">Portfolio</a>
+    <a href="#">Services</a>
+    <a href="#">Contact</a>
+  </nav>
+</header>
 
-  <header>
-    <h1>
-      @miyonotmeor
-      <span>Copyright © 2025 Amirrul Mukminin</span>
-    </h1>
-    <div class="menu-toggle" onclick="toggleMenu()">
-      <span></span>
-      <span></span>
-      <span></span>
+<section class="hero">
+  <div class="hero-text">
+    <h2>Hi! I’m Amirrul,</h2>
+    <p>a web developer & designer specializing in responsive websites that work seamlessly across all devices such as phone, tablet, or desktop. This website is one of my works and serves as my portfolio in Web Design. Feel free to explore!</p>
+    <div style="margin-top: 1.5rem; display: flex; gap: 1rem; justify-content: center;">
+      <button class="button-style" onclick="fadeBetweenSections('.hero', '.portfolio')">Yes, for sure!</button>
+      <button class="button-style" onclick="fadeBetweenSections('.hero', '.expertise')">Nah, nevermind, I'm good.</button>
     </div>
-    <nav id="nav-menu">
-      <a href="#">Home</a>
-      <a href="#">Portfolio</a>
-      <a href="#">Services</a>
-      <a href="#">Contact</a>
-    </nav>
-  </header>
+  </div>
+</section>
 
-  <section class="hero" style="position: absolute; top: 80px; left: 0; width: 100%; height: calc(100vh - 140px); overflow: hidden;">
-    <div class="hero-text">
-      <h2>Hi! I’m Amirrul,</h2>
-      <p>a web developer & designer specializing in responsive websites that work seamlessly across all devices such as phone, tablet, or desktop. This website is one of my works and serves as my portfolio in Web Design. Feel free to explore!</p>
-      <div style="margin-top: 1.5rem; display: flex; gap: 1rem; justify-content: center;">
-        <button style="padding: 0.6rem 1.5rem; border-radius: 999px; background-color: #1d1d1f; color: white; border: none; font-weight: 500; font-size: 0.95rem; cursor: pointer; box-shadow: 0 3px 8px rgba(0,0,0,0.2); transition: transform 0.2s ease;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">Yes, for sure!</button>
-        <button style="padding: 0.6rem 1.5rem; border-radius: 999px; background-color: #1d1d1f; color: white; border: none; font-weight: 500; font-size: 0.95rem; cursor: pointer; box-shadow: 0 3px 8px rgba(0,0,0,0.2); transition: transform 0.2s ease;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">Nah, nevermind, I'm good.</button>
-      </div>
-    </div>
-  </section>
+<section class="portfolio" style="display: none; flex-direction: column; text-align: center; padding: 2rem; overflow-y: auto;">
+  <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">My Previous Works</h2>
+  <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">Here are some of the responsive and interactive websites I’ve designed and developed. These reflect my skills in layout, design, and mobile optimization.</p>
+  <div class="portfolio-grid">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+  <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 1rem;">
+    <button class="button-style" onclick="goBack()">Back</button>
+    <a href="#" class="view-button">View Full Portfolio</a>
+  </div>
+</section>
 
-  <section class="portfolio" style="position: absolute; top: 80px; left: 0; width: 100%; min-height: calc(100vh - 140px); display: none; flex-direction: column; text-align: center; padding: 2rem; overflow-y: auto;">
-    <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">My Previous Works</h2>
-    <p style="max-width: 600px; font-size: 1rem; color: #515154; margin-bottom: 2rem; margin-left: auto; margin-right: auto;">Here are some of the responsive and interactive websites I’ve designed and developed. These reflect my skills in layout, design, and mobile optimization.</p>
+<section class="expertise">
+  <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Additional Expertise</h2>
+  <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto;">I’m not only skilled in web design. I also offer reliable services in data entry, fast typing, Canva visuals, Telegram bot setups, and document conversions (like PDF). These are part of my everyday tools in helping clients get things done, fast and clean.</p>
+  <div class="expertise-buttons">
+    <button class="button-style">Data Entry</button>
+    <button class="button-style">Typing</button>
+    <button class="button-style">Canva Support</button>
+    <button class="button-style">Telegram Bot</button>
+    <button class="button-style">Conversion</button>
+  </div>
+  <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 1rem;">
+    <button class="button-style" onclick="goBackExpertise()">Back</button>
+    <a href="#" class="view-button">View Full Portfolio</a>
+  </div>
+</section>
 
-    <div class="portfolio-grid">
-      <div class="project-card" style="background: transparent; padding: 0; border-radius: 0; box-shadow: none; text-align: left; transition: transform 0.2s ease;">
-        <a href="#" target="_blank" style="text-decoration: none; color: inherit;">
-          <div style="position: relative; width: 100%; height: 140px; background-color: #e0e0e0; border-radius: 6px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.02)'" onmouseout="this.style.transform='scale(1)';">
-            <h3 style="position: absolute; top: 6px; left: 8px; margin: 0; font-size: 0.9rem; background: rgba(255,255,255,0.85); padding: 3px 6px; border-radius: 4px;">Project Title</h3>
-          </div>
-        </a>
-      </div>
-      <div class="project-card" style="background: transparent; padding: 0; border-radius: 0; box-shadow: none; text-align: left; transition: transform 0.2s ease;">
-        <a href="#" target="_blank" style="text-decoration: none; color: inherit;">
-          <div style="position: relative; width: 100%; height: 140px; background-color: #e0e0e0; border-radius: 6px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.02)'" onmouseout="this.style.transform='scale(1)';">
-            <h3 style="position: absolute; top: 6px; left: 8px; margin: 0; font-size: 0.9rem; background: rgba(255,255,255,0.85); padding: 3px 6px; border-radius: 4px;">Project Title</h3>
-          </div>
-        </a>
-      </div>
-      <div class="project-card" style="background: transparent; padding: 0; border-radius: 0; box-shadow: none; text-align: left; transition: transform 0.2s ease;">
-        <a href="#" target="_blank" style="text-decoration: none; color: inherit;">
-          <div style="position: relative; width: 100%; height: 140px; background-color: #e0e0e0; border-radius: 6px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.02)'" onmouseout="this.style.transform='scale(1)';">
-            <h3 style="position: absolute; top: 6px; left: 8px; margin: 0; font-size: 0.9rem; background: rgba(255,255,255,0.85); padding: 3px 6px; border-radius: 4px;">Project Title</h3>
-          </div>
-        </a>
-      </div>
-    </div>
+<script>
+  function fadeBetweenSections(hideSelector, showSelector) {
+    const hideEl = document.querySelector(hideSelector);
+    const showEl = document.querySelector(showSelector);
+    if (!hideEl || !showEl) return;
+    hideEl.style.opacity = 1;
+    showEl.style.display = 'flex';
+    showEl.style.opacity = 0;
+    hideEl.style.transition = 'opacity 1s ease, transform 1s ease';
+    showEl.style.transition = 'opacity 1s ease, transform 1s ease';
+    hideEl.style.opacity = 0;
+    hideEl.style.transform = 'scale(0.96)';
+    setTimeout(() => {
+      hideEl.style.display = 'none';
+      showEl.style.opacity = 1;
+      showEl.style.transform = 'scale(1)';
+    }, 800);
+  }
 
-    <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 1rem;">
-      <button onclick="goBack()" style="padding: 0.6rem 1.5rem; border-radius: 999px; background-color: #1d1d1f; color: white; border: none; font-weight: 500; font-size: 0.95rem; cursor: pointer; box-shadow: 0 3px 8px rgba(0,0,0,0.2); transition: transform 0.2s ease;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">Back</button>
-      <a href="#" style="padding: 0.6rem 1.5rem; border-radius: 999px; background-color: #1d1d1f; color: white; text-decoration: none; font-weight: 500; font-size: 0.95rem; display: inline-block; box-shadow: 0 3px 8px rgba(0,0,0,0.2); transition: transform 0.2s ease;" onmouseover="this.style.transform='translateY(-2px)'" onmouseout="this.style.transform='none'">View Full Portfolio</a>
-    </div>
-  </section>
+  function toggleMenu() {
+    const nav = document.getElementById('nav-menu');
+    nav.classList.toggle('active');
+  }
 
-  <script>
-    function fadeBetweenSections(hideSelector, showSelector) {
-      const hideEl = document.querySelector(hideSelector);
-      const showEl = document.querySelector(showSelector);
-      hideEl.style.opacity = 1;
-      showEl.style.display = 'flex';
-      showEl.style.opacity = 0;
-      hideEl.style.transition = 'opacity 1s ease, transform 1s ease';
-      showEl.style.transition = 'opacity 1s ease, transform 1s ease';
-      hideEl.style.opacity = 0;
-      hideEl.style.transform = 'scale(0.96)';
-      setTimeout(() => {
-        hideEl.style.display = 'none';
-        showEl.style.opacity = 1;
-        showEl.style.transform = 'scale(1)';
-      }, 800);
-    }
+  function goBack() {
+    fadeBetweenSections('.portfolio', '.hero');
+  }
 
-    document.querySelectorAll('button')[0].addEventListener('click', function() {
-      fadeBetweenSections('.hero', '.portfolio');
-    });
-
-    function toggleMenu() {
-      const nav = document.getElementById('nav-menu');
-      nav.classList.toggle('active');
-    }
-
-    function goBack() {
-      fadeBetweenSections('.portfolio', '.hero');
-    }
-  </script>
-</body>
-</html>
+  function goBackExpertise() {
+    fadeBetweenSections('.expertise', '.hero');
+  }
+</script>
