--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
   </div>
   <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 1rem;">
     <button class="button-style" onclick="goBack()">Back</button>
-    <a href="#" class="view-button">View Full Portfolio</a>
+    <a href="https://www.upwork.com/freelancers/~017cc75228354e54a8?viewMode=1" class="view-button" target="_blank">View Full Portfolio</a>
   </div>
 </section>
 
@@ -317,7 +317,7 @@
   </div>
   <div style="margin-top: 2rem; display: flex; justify-content: center; gap: 1rem;">
     <button class="button-style" onclick="goBackExpertise()">Back</button>
-    <a href="#" class="view-button">View Full Portfolio</a>
+    <a href="https://www.upwork.com/freelancers/~017cc75228354e54a8?viewMode=1" class="view-button" target="_blank">View Full Portfolio</a>
   </div>
 </section>
 
