--- a/index.html
+++ b/index.html
@@ -295,7 +295,22 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">My Previous Works</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">Here are some of the responsive and interactive websites I’ve designed and developed. These reflect my skills in layout, design, and mobile optimization.</p>
   <div class="portfolio-grid">
-    <div></div>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+</div>
     <div></div>
     <div></div>
   </div>
@@ -326,7 +341,22 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Data Entry</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">I provide clean and organized data entry services to help clients manage spreadsheets, databases, and records efficiently. Accuracy, speed, and consistency are always my top priorities in every project I take on.</p>
   <div class="portfolio-grid">
-    <div></div>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Data%20Entry%201).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+</div>
     <div></div>
     <div></div>
   </div>
@@ -341,7 +371,22 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Typing</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">From handwritten notes to scanned PDFs, I offer fast and accurate typing services tailored to your formatting needs. Whether it's a few pages or large documents, I deliver neat and editable results with precision.</p>
   <div class="portfolio-grid">
-    <div></div>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+</div>
     <div></div>
     <div></div>
   </div>
@@ -356,7 +401,22 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Canva Support</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">With Canva Pro and strong design sense, I help clients craft visually appealing materials — from social media posts to business documents — aligned with their brand and purpose. Every design is editable and ready to use.</p>
   <div class="portfolio-grid">
-    <div></div>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+</div>
     <div></div>
     <div></div>
   </div>
@@ -371,7 +431,22 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Telegram Bot</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">I offer setup and customization support for Telegram bots — useful for automation, client interaction, or task management. Whether it's command creation or flow setup, I help make your Telegram work smarter.</p>
   <div class="portfolio-grid">
-    <div></div>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+</div>
     <div></div>
     <div></div>
   </div>
@@ -386,7 +461,22 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Conversion (PDF etc.)</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">Need to convert images, Word docs, or PDFs quickly and neatly? I deliver accurate file conversions, ensuring formatting is preserved and results are fully usable across platforms or apps.</p>
   <div class="portfolio-grid">
-    <div></div>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+    </div>
+  </a>
+</div>
     <div></div>
     <div></div>
   </div>
