--- a/index.html
+++ b/index.html
@@ -295,9 +295,9 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">My Previous Works</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">Here are some of the responsive and interactive websites I’ve designed and developed. These reflect my skills in layout, design, and mobile optimization.</p>
   <div class="portfolio-grid">
-  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+  <a href="https://miyonotmeor.github.io/portfolio-website/" target="_blank" style="text-decoration: none;">
     <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+      <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Web%20Design%201).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
   <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
@@ -341,7 +341,7 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Data Entry</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">I provide clean and organized data entry services to help clients manage spreadsheets, databases, and records efficiently. Accuracy, speed, and consistency are always my top priorities in every project I take on.</p>
   <div class="portfolio-grid">
-  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+  <a href="https://docs.google.com/spreadsheets/d/11jkp98DLemuVSmAFpk55n0t6dQ1Ztmllt9KVqgYl5eE/edit?usp=sharing" target="_blank" style="text-decoration: none;">
     <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Data%20Entry%201).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
@@ -401,19 +401,19 @@
   <h2 style="font-size: 2rem; font-weight: 600; margin-bottom: 1rem;">Canva Support</h2>
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">With Canva Pro and strong design sense, I help clients craft visually appealing materials — from social media posts to business documents — aligned with their brand and purpose. Every design is editable and ready to use.</p>
   <div class="portfolio-grid">
-  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+  <a href="https://drive.google.com/file/d/1icwVFupSkcN4Ap2HEheTU-hdYg58dGn7/view?usp=sharing" target="_blank" style="text-decoration: none;">
     <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+      <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Canva%201).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
-  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+  <a href="https://drive.google.com/file/d/1Z0NVhPZmov7mesMRi38P0i4Rry1_v1iw/view?usp=sharing" target="_blank" style="text-decoration: none;">
     <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+      <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Canva%202).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
-  <a href="LINK_PROJEK_AWAK" target="_blank" style="text-decoration: none;">
+  <a href="https://drive.google.com/file/d/1Wmf3wmxKaqhm1IVpnEh54xqGGNXLKH-T/view?usp=sharing" target="_blank" style="text-decoration: none;">
     <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
-      <img src="GAMBAR_AWAK.jpg" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
+      <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Canva%203).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
 </div>
