--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
   <p style="max-width: 600px; font-size: 1rem; color: #515154; margin: 0 auto 2rem auto;">Here are some of the responsive and interactive websites I’ve designed and developed. These reflect my skills in layout, design, and mobile optimization.</p>
   <div class="portfolio-grid">
   <a href="https://miyonotmeor.github.io/portfolio-website/" target="_blank" style="text-decoration: none;">
-    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease;" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
+    <div style="position: relative; width: 100%; height: 150px; border-radius: 8px; overflow: hidden; transition: transform 0.3s ease; box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);" onmouseover="this.style.transform='scale(1.05)'" onmouseout="this.style.transform='scale(1)'">
       <img src="https://github.com/miyonotmeor/portfolio-website/blob/main/Thumbnail%20(Web%20Design%201).png?raw=true" alt="Nama Projek" style="width: 100%; height: 100%; object-fit: cover;" />
     </div>
   </a>
